Fix alignment of filters and users

--- a/gui/src/Users/styles/users.scss
+++ b/gui/src/Users/styles/users.scss
@@ -25,7 +25,6 @@
   width: 100%;
 }
 .filter-column {
-  margin-top: 1em;
   margin-right: 2em;
   width: 12em;
 }
